# burger-bot

./: README.md  bot.py  pyproject.toml  pyrightconfig.json  run_mock_server.py  todo.md
functions/: __init__.py  base.py  order_operations.py  state_operations.py
models/: __init__.py  session_state.py
prompts/: __init__.py  conversation_prompt.md
services/: burger_api.py  mock_data.py  models.py
